--- a/app/app.html
+++ b/app/app.html
@@ -1,26 +1,13 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">Minimum starter kit for angular2</a>
-    <p class="navbar-text navbar-right"><a href="https://github.com/mitsuruog/angular2-minimum-starter" class="navbar-link">github</a></p>
+    <p class="navbar-text navbar-right"><a href="https://github.com/mitsuruog/_angular2_http" class="navbar-link">github</a></p>
   </div>
 </nav>
 <div class="container">
-  <div class="jumbotron">
-    <h2>Minimum starter kit for angular2</h2>
-    <h3>Features</h3>
-    <ul>
-      <li>Minimun Angular2 dependencies</li>
-      <li>Minimun configure TypeScript</li>
-      <li>Minimun configure Visual Studio Code</li>
-      <li>Minimun development HTTP Server</li>
-      <li>Minimun Javascript intellisense via typings</li>
-      <li>Minimun test seed and coverage</li>
-      <li>Module loader via SystemJS</li>
-      <li>Easy to deploy on Heroku</li>
-      <li>Bootstrap template</li>
-    </ul>
-    <p>
-      <a class="btn btn-default" href="https://github.com/mitsuruog/angular2-minimum-starter" role="button">Learn more »</a>
-    </p>
-  </div>
+  <ul class="nav nav-tabs">
+    <li role="presentation"><a [routerLink]="['HeroList']">HeroList</a></li>
+    <li role="presentation"><a [routerLink]="['Wikipedia']">Wikipedia</a></li>
+  </ul>
+  <router-outlet></router-outlet>
 </div>
